--- a/public/app.css
+++ b/public/app.css
@@ -156,13 +156,13 @@ input:focus {
 
 .input-code {
   width: 100%;
-  padding: 10px;
-  margin: 15px 0;
+  padding: 70px;
+  margin: 15px 0px;
   border: 1px solid #ddd;
   border-radius: 5px;
   background-color: #f1f1f1;
   color: #333;
-  font-size: 1rem;
+  font-size: 2.5rem;
   text-align: center;
 }
 
@@ -252,6 +252,10 @@ li:last-child {
   color: #333;
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.05);
   text-align: center;
+  font-size: 1.5rem;
+  font-weight: bold;
+  line-height: 1.6;
+  margin-bottom: 10px;
 }
 
 /* Hover effect for the question text */
@@ -327,3 +331,44 @@ li:last-child {
   margin-left: 20px; /* Space between button and session code */
   text-align: right; /* Align the session code to the right */
 }
+
+.fullscreen-code {
+  display: none; /* Ensure it does not appear until needed */
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.8);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 1000;
+  cursor: pointer;
+}
+
+/* White box for the code */
+.code-box {
+  background-color: white;
+  color: black;
+  padding: 6rem 15rem;
+  border-radius: 16px;
+  box-shadow: 0 8px 30px rgba(0, 0, 0, 0.3);
+  font-size: 8rem;
+  font-weight: bold;
+  text-align: center;
+}
+
+#session-code-input, #question-input {
+  width: 200%; /* Adjust width for input fields */
+  margin: 10px auto; /* Center the input */
+  max-width: none;
+  position: relative;
+  left: -50%;
+  display: block;
+}
+
+#join-session-btn, #submit-question-btn {
+  width: auto; /* Keep buttons at default size */
+  display: inline-block; /* Prevent buttons from stretching */
+ }
